chen-k8s-demo/deployment/f5-asp-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: f5-asp
  namespace: kube-system
spec:
  template:
    metadata:
      labels:
        name: f5-asp
    spec:
      hostNetwork: true
      containers:
        - name: proxy-plugin
          image: "10.1.10.11:5000/asp:v1.0.0"
          args:
            - --config-file
            - /etc/configmap/asp.config.json
          securityContext:
            privileged: false
          volumeMounts:
          - mountPath: /var/run/kubernetes/proxy-plugin
            name: plugin-config
            readOnly: true
          - mountPath: /etc/configmap
            name: asp-config
      volumes:
        - name: plugin-config
          hostPath:
            path: /var/run/kubernetes/proxy-plugin
        - name: asp-config
          configMap:
            name: f5-asp-config
