chen-k8s-demo/deployment/my-frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-frontend
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: my-frontend
    spec:
      containers:
      - image: "f5devcentral/f5-demo-httpd:nginx"
        imagePullPolicy: IfNotPresent
        name: my-frontend
        ports:
        - containerPort: 80
          protocol: TCP
