chen-k8s-demo/deployment/my-website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-website  
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
      - image: f5devcentral/f5-demo-httpd:nginx
        imagePullPolicy: IfNotPresent
        name: my-website
        ports:
        - containerPort: 443
        - containerPort: 80
          protocol: TCP
