chen-k8s-demo/deployment/istio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istiogwcis
  labels:
    run: my-website
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: MyApps
    cis.f5.com/as3-pool: istiogwcis_pool
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: NodePort
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
---
apiVersion: v1
kind: Service
metadata:
  name: istiogwcistls
  labels:
    run: istiogwcistls
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: MyApps
    cis.f5.com/as3-pool: istiogwcistls_pool
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  type: NodePort
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
