chen-k8s-demo/deployment/my-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    asp.f5.com/config: |
       {
          "ip-protocol": "http",
         "load-balancing-mode": "round-robin",
         "flags" : {
           "x-forwarded-for": true,
           "x-served-by": true
         }
       }
  name: my-backend
  labels:
    run: my-backend
spec:
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: my-backend
