chen-k8s-demo/deployment/my-echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-echo
  labels:
    run: my-echo
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: MyApps
    cis.f5.com/as3-pool: echo_pool    
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  type: NodePort
  selector:
    run: my-echo
