chen-k8s-demo/deployment/my-frontend-service-as3.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-frontend
  labels:
    app: my-frontend
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: MyApps
    cis.f5.com/as3-pool: frontend_pool

spec:
  ports:
  - name: my-frontend
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: my-frontend
