chen-k8s-demo/deployment/my-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website
  labels:
    app: my-website
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: MyApps
    cis.f5.com/as3-pool: website_pool
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: my-website
---
apiVersion: v1
kind: Service
metadata:
  name: my-website-https
  labels:
    app: my-website
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: MyApps
    cis.f5.com/as3-pool: websitetls_pool
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  type: LoadBalancer
  selector:
    app: my-website
