chen-k8s-demo/deployment/node-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-blue  
  template:
    metadata:
      labels:
        app: node-blue
    spec:
      containers:
      - image: "f5devcentral/f5-demo-httpd:nginx"
        imagePullPolicy: IfNotPresent
        name: node-blue
        ports:
        - containerPort: 80
        - containerPort: 443
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: node-blue
  labels:
    app: node-blue
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  type: NodePort
  selector:
    app: node-blue

---
apiVersion: v1
kind: Service
metadata:
  name: node-blue-tls
  labels:
    app: node-blue-tls
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  type: NodePort
  selector:
    app: node-blue
