chen-k8s-demo/deployment/node-green.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-green
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: node-green
    spec:
      containers:
      - image: "f5devcentral/f5-demo-httpd:nginx"
        imagePullPolicy: IfNotPresent
        name: node-green
        ports:
        - containerPort: 80
        - containerPort: 443
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: node-green
  labels:
    run: node-green
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  type: NodePort
  selector:
    run: node-green

---
apiVersion: v1
kind: Service
metadata:
  name: node-green-tls
  labels:
    run: node-green-tls
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: MyApps
    cis.f5.com/as3-pool: greentls_pool    
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  type: NodePort
  selector:
    run: node-green
